Project

General

Profile

Actions

Bug #4438

closed

rescue args type check omitted

Bug #4438: rescue args type check omitted

Added by nahi (Hiroshi Nakamura) over 15 years ago. Updated about 14 years ago.

Status:
Closed
Target version:
ruby -v:
-
Backport:
[ruby-core:35364]

Description

=begin
Rescue arg must be class or module in 1.8. 1.9 looks to ignore when it's not a class or module.

Is this expected behavior?

0% ruby -ve 'begin; raise; rescue nil; end'
ruby 1.9.3dev (2011-02-23 trunk 30945) [x86_64-linux]
-e:1:in `

': unhandled exception
1% ruby187 -ve 'begin; raise; rescue nil; end'
ruby 1.8.7 (2010-12-23 patchlevel 330) [x86_64-linux]
-e:1: class or module required for rescue clause (TypeError)

=end


Files

0001-check-rescue-clause-arguments.patch (6.27 KB) 0001-check-rescue-clause-arguments.patch nobu (Nobuyoshi Nakada), 08/06/2012 10:33 PM

Related issues 1 (1 open — 0 closed)

Related to Ruby - Feature #19620: allow non-module rescue filters that implement the === opertorOpenActions
Actions

Also available in: PDF Atom