vm_core.h
@@ -598,6 +598,16 @@ typedef struct {
 } rb_binding_t;
 
 /* used by compile time and send insn */
+
+enum vm_check_match_type {
+    VM_CHECKMATCH_TYPE_WHEN = 1,
+    VM_CHECKMATCH_TYPE_CASE = 2,
+    VM_CHECKMATCH_TYPE_RESCUE = 3
+};
+
+#define VM_CHECKMATCH_TYPE_MASK   0x03
+#define VM_CHECKMATCH_ARRAY       0x04
+
 #define VM_CALL_ARGS_SPLAT_BIT     (0x01 << 1)
 #define VM_CALL_ARGS_BLOCKARG_BIT  (0x01 << 2)
 #define VM_CALL_FCALL_BIT          (0x01 << 3)
